[project]
name = "riskstar"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["geobn>=0.1", "numpy", "pyproj", "affine"]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/riskstar"]
